Pool's pages naming consistency fixed, referees and technician import panel clarity is fixed, overlapping problems fixed

--- a/css/cw_mainstyle.css
+++ b/css/cw_mainstyle.css
@@ -651,7 +651,7 @@ footer > div > div:nth-of-type(2) > a, footer > div > div:nth-of-type(3) > a {
 	color: var(--c-black);
 	text-transform: uppercase;
 	font-family: var(--bold);
-	z-index: 0;
+	z-index: 1;
 }
 
 #slideshow_title::after {
